--- a/Twin to Win/Packages/manifest.json
+++ b/Twin to Win/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.jimmycushnie.noisynodes": "https://github.com/JimmyCushnie/Noisy-Nodes.git",
     "com.tojynick.shaders.stylizedwater": "https://github.com/tojynick/Stylized-Water-Shader-Unity-URP.git",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.ai.navigation": "1.1.4",
