--- a/Twin to Win/Packages/manifest.json
+++ b/Twin to Win/Packages/manifest.json
@@ -3,6 +3,8 @@
     "com.jimmycushnie.noisynodes": "https://github.com/JimmyCushnie/Noisy-Nodes.git",
     "com.tojynick.shaders.stylizedwater": "https://github.com/tojynick/Stylized-Water-Shader-Unity-URP.git",
     "com.unity.2d.sprite": "1.0.0",
+    "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.2d.tilemap.extras": "3.1.2",
     "com.unity.ai.navigation": "1.1.4",
     "com.unity.cinemachine": "2.9.7",
     "com.unity.collab-proxy": "2.0.7",
