--- a/Twin to Win/Packages/manifest.json
+++ b/Twin to Win/Packages/manifest.json
@@ -19,6 +19,7 @@
     "com.unity.timeline": "1.7.5",
     "com.unity.toonshader": "0.9.4-preview",
     "com.unity.ugui": "1.0.0",
+    "com.unity.visualeffectgraph": "14.0.8",
     "com.unity.visualscripting": "1.9.0",
     "moe.meryuhi.effects.fog": "https://github.com/meryuhi/URPFog.git?path=Packages/Fog",
     "com.unity.modules.ai": "1.0.0",
